--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/JavaApp/nbproject/private/
+/JavaApp/build/
+/MensagensSemanais/nbproject/private/
+/Livraria/nbproject/private/
+/Livraria/build/
